# goblingold

./: .deploy  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: audit.yml  build.yml
programs/best-apy/: Cargo.toml
programs/best-apy/src/: check_hash.rs  deposit.rs  duplicated_ixs.rs  error.rs  generic_accounts.rs  instructions.rs  lib.rs  macros.rs  protocols.rs  refresh.rs  vault.rs  vault_old.rs  withdraw.rs
programs/best-apy/src/instructions/: add_protocol.rs  close_withdraw_ticket.rs  create_vault_user_ticket_account.rs  deposit.rs  deposit_from_native.rs  initialize_ticket_mint.rs  initialize_vault.rs  mango_reimbursement.rs  open_withdraw_ticket.rs  protocol_deposit.rs  protocol_deposit_2_ixs.rs  protocol_deposit_isolated_pool.rs  protocol_rewards.rs  protocol_rewards_isolated_pool.rs  protocol_withdraw.rs  protocol_withdraw_2_ixs.rs  protocol_withdraw_isolated_pool.rs  protocol_withdraw_max.rs  refresh_weights.rs  set_hash.rs  set_hashes.rs  set_protocol_weights.rs  set_refresh_params.rs  set_tvl_and_prices.rs  vault_transfer.rs  withdraw.rs  withdraw_and_close.rs  withdraw_ticket_reserve.rs
programs/best-apy/src/protocols/: francium.rs  francium_farming_user.rs  francium_lending_pool.rs  mango.rs  port.rs  solend.rs  state.rs  tulip.rs  tulip_reserve.rs
programs/best-apy/src/protocols/state/: francium_lending_pool.rs  tulip_reserve.rs
programs/lending-arb/: Cargo.toml  file2.rs
programs/lending-arb/src/: error.rs  health.rs  instructions.rs  lib.rs  protocols.rs  vault.rs
programs/lending-arb/src/instructions/: close_withdraw_ticket.rs  create_vault_user_ticket_account.rs  initialize_vault.rs  open_withdraw_ticket.rs  protocol_borrow.rs  protocol_deposit.rs  protocol_initialize.rs  protocol_repay.rs  protocol_rewards.rs  protocol_withdraw.rs  set_hashes.rs
programs/lending-arb/src/protocols/: francium.rs  solend.rs  state.rs
programs/liq-mining/: Cargo.toml
programs/liq-mining/src/: lib.rs  sunny.rs  swap.rs
programs/liq-mining/src/swap/: raydium_amm_instruction.rs
programs/mango-v3-reimbursement/: Cargo.toml  mango_v3_reimbursement.json
programs/mango-v3-reimbursement/src/: lib.rs
tests/: best-apy.ts  ponzilabs.ts  solend_stable_pool.ts
tests/accounts/: 2RkfbNb4PoNKiPAVSExfQbRzJ8rExWF1xh2KrQQaKY3w.json  3sVfNvRtM6zYdpgkpYYDMva6kGovFKbdwYR2tw5YLasU.json  5UmDHvpGpL8hCMCuGQhaNbmFdDHchwLRiVB8yAtxPewJ.json  77MQfX2oHArHSGs2PEKqtsnnzPdZ6S1pUHq33LL7GZwB.json  ACCONTS.txt  C3s7DKRLsr4YjdzDeKvQW47BoKcD8QzzThRNqV9Z71qm.json  CL6TVscze5qrzhb9vJjydDWxj8dB2kj5YUAK5j1s2cAW.json  Cpwn5VVk7yvS5tgGJMKvuUfyaBQHiubCxMeHVvtLByw9.json  D2HP2mP4rGYaBbQSprhLYJu31hMXqsxTcmYQsMqBUjKb.json  D6cRe4QeGzsqxqFhm4iXfFtjSDAMsrRaEqSjczU8BbFj.json  DTQQ6a2P3RgGgAkmPaXDuAoCcpiWvvKWLHmNZQQrc1MW.json  DmsfRjs2p5WLFLicPV8FWXLKuyMkroa7zBzL4ntkWmnu.json  G3KMonQud4FPMVfbKASKxQ5bqq8f4BSFY6sRdM9Ymra5.json  GtTQahMH2N8NZQUHiSEQft8XM95qXs3UNybSdr9gisL2.json  H1u51MjTch9dgGLhwdaWSxqthucaA9BsnZLV9DK7WK75.json  HU5PdADJc2cD9NvzqjEihyjC4qAQ66kLrJNzzTYD8YFf.json  W89eZsn18V2mMbhuih8sDPFvh8Lt2BNUsqu3WQ3xFDL.json  xjPVdWkQDGC8UUFdA5NZ2FamoDUPdMR95o6aXrHswNK.json
tests/best-apy/: Test.protocols.toml  Test.toml  best-apy.ts  launcher.sh  protocols.ts
tests/best-apy-btc/: Test.toml  best-apy-btc.ts
tests/best-apy-eth/: Test.toml  best-apy-usdt.ts
tests/best-apy-usdt/: Test.toml  best-apy-usdt.ts
tests/best-apy/BTC/: Test.toml  best-apy.ts
tests/best-apy/ETH/: Test.toml
tests/best-apy/MNGO/: Test.toml
tests/best-apy/ORCA/: Test.toml
tests/best-apy/RAY/: Test.toml
tests/best-apy/SAMO/: Test.toml
tests/best-apy/SOL/: Test.toml  best-apy.ts
tests/best-apy/SRM/: Test.toml
tests/best-apy/USDC/: Test.toml
tests/best-apy/USDT/: Test.toml  best-apy.ts
tests/best-apy/scnSOL/: Test.toml
tests/best-apy/soETH/: Test.toml  best-apy.ts
tests/best-apy/stSOL/: Test.toml
tests/deposit-native-sol/: Test.toml  deposit.ts
tests/lending-arb/: Test.toml  lending-aggr.ts  lending-arb.ts  protocols.ts
tests/mango-reimbursement/: Test.toml  reimbursement-mngo.ts  reimbursement-wsol.ts  reimbursement.ts
tests/rebalance/: Test.toml  rebalance.ts
tests/solend-stable-pool/: Test.toml  usdc.ts
tests/withdraw-ticket/: Test.toml  withdraw-ticket.ts
tests/withdraw-ticket-gov/: withdraw-ticket-gov.ts
