[package]
name = "best-apy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "best_apy"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
test = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
solana-maths = "0.1.2"
spl-token = { version = "^3.1.1", features = ["no-entrypoint"] }
port-anchor-adaptor = "0.3.4"
mango = {package = "mango", git = "https://github.com/blockworks-foundation/mango-v3", features = ["no-entrypoint"], rev = "ae5fe3b"} # v3.4.1
solend-token-lending = { version = "0.1.1", features = ["no-entrypoint"] }
arrayref = "^0.3.6"
