[package]
name = "liq-mining"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "liq_mining"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
stable-swap-anchor = { version =  "1.7.0" }
quarry-mine = { version = "1.11.11", features = ["cpi"] }
quarry-mint-wrapper = { version = "1.11.11", features = ["cpi"] }
redeemer = { version = "1.0.11", features = ["cpi"] }
mint-proxy = { version = "1.0.11", features = ["cpi"] }
