[package]
description = "Created with Anchor"
edition = "2021"
name = "liq-mining"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "liq_mining"

[features]
cpi = ["no-entrypoint"]
default = []
devnet = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
mint-proxy = {package="mint-proxy",git="https://github.com/saber-hq/saber-periphery", features = ["cpi"], rev="3ffb64b"}
quarry-mine = {version = "3.0.0", features = ["cpi"]}
quarry-mint-wrapper = {version = "3.0.0", features = ["cpi"]}
redeemer = {package="redeemer",git="https://github.com/saber-hq/saber-periphery", features = ["cpi"], rev="3ffb64b"}
stable-swap-anchor = {version = "1.7.3"}
